// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmissionActions /> does not render button when step is staff 1`] = `
<div
  className="text-center py-2"
/>
`;

exports[`<SubmissionActions /> render load next when step peer is not waiting nor waiting for submission 1`] = `
<div
  className="text-center py-2"
>
  <Button
    className="mb-3"
    iconBefore={[MockFunction icons.Highlight]}
    onClick={
      Object {
        "useCallback": Object {
          "cb": [Function],
          "prereqs": Array [
            "peer",
            [MockFunction],
          ],
        },
      }
    }
  >
    default
     (optional)
  </Button>
</div>
`;

exports[`<SubmissionActions /> render load next when step studentTraining is not waiting nor waiting for submission 1`] = `
<div
  className="text-center py-2"
>
  <Button
    className="mb-3"
    onClick={
      Object {
        "useCallback": Object {
          "cb": [Function],
          "prereqs": Array [
            "studentTraining",
            [MockFunction],
          ],
        },
      }
    }
  >
    default
  </Button>
</div>
`;

exports[`<SubmissionActions /> render message step is not staff and step state done 1`] = `
<div
  className="text-center py-2"
>
  <Button
    className="mb-3"
    onClick={
      Object {
        "useCallback": Object {
          "cb": [Function],
          "prereqs": Array [
            "studentTraining",
            [MockFunction],
          ],
        },
      }
    }
  >
    default
  </Button>
</div>
`;

exports[`<SubmissionActions /> render message step is not staff and step state inProgress 1`] = `
<div
  className="text-center py-2"
>
  <Button
    className="mb-3"
    onClick={
      Object {
        "useCallback": Object {
          "cb": [Function],
          "prereqs": Array [
            "studentTraining",
            [MockFunction],
          ],
        },
      }
    }
  >
    default
  </Button>
</div>
`;
